Fixed Mobile View

--- a/css/style.css
+++ b/css/style.css
@@ -521,7 +521,10 @@ body {
     }
     .education-block {
         justify-content: flex-start; /* Align education blocks to the left */
+        justify-content: center;
         text-align: left;
+        align-items: flex-start;
+
     }
     .footer-links {
         flex-direction: column;
